# eventy

./: .gitignore  CI_SETUP.md  Makefile  PYLINT_SETUP.md  README.md  REDIS_IMPLEMENTATION.md  SQL_IMPLEMENTATION_SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
eventy/: __init__.py  __main__.py  claim.py  constants.py  event_queue.py  event_result.py  event_status.py  eventy_config.py  eventy_error.py  page.py  queue_event.py  queue_manager.py  subscriber.py  subscription.py  util.py  webhook_subscriber.py
eventy/config/: default_eventy_config.py  eventy_config.py
eventy/fastapi/: README.md  __main__.py  app.py  endpoints.py  fastapi.py  websocket_subscriber.py
eventy/fs/: README.md  __init__.py  abstract_file_event_queue.py  file_event_queue_manager.py  file_heartbeat.py  file_queue_manager.py  filesystem_event_coordinator.py  filesystem_event_meta.py  filesystem_event_queue.py  filesystem_event_queue_manager.py  filesystem_event_store.py  filesystem_page.py  filesystem_process_meta.py  filesystem_queue_manager.py  filesystem_watch.py  filesystem_worker_registry.py  filesystem_worker_status.py  polling_file_event_queue.py  watchdog_file_event_queue.py
eventy/mem/: __init__.py  memory_event_queue.py  memory_event_queue_manager.py  memory_queue_manager.py  pickle_serializer.py  serializer.py
eventy/redis/: README.md  __init__.py  redis_event_queue.py  redis_file_event_queue.py  redis_queue_manager.py
eventy/serializers/: __init__.py  json_serializer.py  pickle_serializer.py  pydantic_serializer.py  serializer.py
eventy/sql/: README.md  __init__.py  alembic.ini  migrate.py  models.py  sql_event_queue.py  sql_queue_manager.py
eventy/sql/migrations/: env.py
eventy/sql/migrations/versions/: 001_initial_schema.py
eventy/subscriber/: __init__.py  primary_subscriber.py  subscriber.py  subscription.py  webhook_subscriber.py
eventy/subscribers/: nonce_subscriber.py  subscriber.py  worker_match_subscriber.py
examples/: 2_fastapi_example.py  3_distributed_task_manager.py  README.md  b_fastapi_example.py  c_distributed_task_manager.py  cli_example.py  d_sql_example.py  eventy_advanced_example.py  eventy_example.py  example_file_event_queue.py  fastapi_example.py  redis_example.py  redis_queue_manager_example.py  watchdog_example.py  webhook_example.py
examples/static/: index.html
scripts/: lint.py
src/eventy/: event_queue.py  event_queue_manager.py  eventy.py  queuey.py  queuey_manager.py  subscriber.py
tests/: README.md  abstract_event_queue_base.py  abstract_event_queue_case.py  test_default_eventy_config.py  test_event_queue_default_methods.py  test_eventy_config.py  test_file_queue_manager.py  test_filesystem_event_queue.py  test_filesystem_event_queue_comprehensive.py  test_filesystem_watch.py  test_filesystem_watch_modes.py  test_get_impl.py  test_get_payload_type.py  test_memory_event_queue.py  test_memory_event_queue_comprehensive.py  test_memory_queue_manager.py  test_nonce_subscriber.py  test_polling_file_event_queue.py  test_pydantic_serializer.py  test_redis_file_event_queue.py  test_redis_file_event_queue_old.py  test_redis_implementations.py  test_redis_queue_manager.py  test_sql_event_queue_unittest.py  test_watchdog_file_event_queue.py  test_worker_match_subscriber.py
